<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ukidapp.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">


    </fragment>


    <fragment
        android:id="@+id/nav_study_math"
        android:name="com.example.ukidapp.ui.UserAnalysis.UserAnalysisFragment"
        android:label="@string/menu_useranalysis"
        tools:layout="@layout/fragment_useranalysis" />

    <fragment
        android:id="@+id/nav_study_science"
        android:name="com.example.ukidapp.ui.StudyMath.StudyMathFragment"
        android:label="@string/menu_study_math"
        tools:layout="@layout/calculator_play"/>



</navigation>