<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_study_object"
            android:icon="@drawable/ic_menu_camera"
            android:title="물체 학습하기" />
        <item
            android:id="@+id/nav_study_math"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_useranalysis" />
        <item
            android:id="@+id/nav_study_science"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_study_math" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="로그아웃" />
    </group>
</menu>
