<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/setup_layout"
    android:background="@color/cardview_light_background"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="30dp"
        android:gravity="center"
        android:text="신체운동지능영역"
        android:textColor="#000"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/Physical_1"
        android:textColor="#000"
        />
    <RadioGroup
        android:id="@+id/Physical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <RadioButton
            android:layout_weight="1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:textColor="#000"
            android:text="1"/>
        <RadioButton
            android:layout_weight="1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:textColor="#000"
            android:text="2"/>
        <RadioButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:textColor="#000"
            android:text="3"/>
        <RadioButton
            android:layout_weight="1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:textColor="#000"
            android:text="4"/>
        <RadioButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:textColor="#000"
            android:text="5"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/Physical_2"
        android:textColor="#000"/>
    <RadioGroup
        android:id="@+id/Physical2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <RadioButton
            android:layout_weight="1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:textColor="#000"
            android:text="1"/>
        <RadioButton
            android:layout_weight="1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:textColor="#000"
            android:text="2"/>
        <RadioButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:textColor="#000"
            android:text="3"/>
        <RadioButton
            android:layout_weight="1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:textColor="#000"
            android:text="4"/>
        <RadioButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:textColor="#000"
            android:text="5"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/Physical_3"
        android:textColor="#000"
        />
    <RadioGroup
        android:id="@+id/Physical3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <RadioButton
            android:layout_weight="1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:textColor="#000"
            android:text="1"/>
        <RadioButton
            android:layout_weight="1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:textColor="#000"
            android:text="2"/>
        <RadioButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:textColor="#000"
            android:text="3"/>
        <RadioButton
            android:layout_weight="1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:textColor="#000"
            android:text="4"/>
        <RadioButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:textColor="#000"
            android:text="5"/>
    </RadioGroup>
</LinearLayout>