<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/setup_layout"
    android:background="@color/cardview_light_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="음악지능영역"
            android:textColor="#000"
            android:textSize="30dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/Music_1"
            android:textColor="#000"
            app:layout_constraintTop_toTopOf="@+id/guideline17"
            android:layout_marginLeft="8dp"/>

        <RadioGroup
            android:id="@+id/Music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textview1">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="1"
                android:textColor="#000" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="2"
                android:textColor="#000" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="3"
                android:textColor="#000" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="4"
                android:textColor="#000" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="5"
                android:textColor="#000" />
        </RadioGroup>

        <TextView
            android:id="@+id/textview2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/Music_2"
            android:textColor="#000"
            app:layout_constraintTop_toTopOf="@+id/guideline18"
            android:layout_marginLeft="8dp"/>

        <RadioGroup
            android:id="@+id/Music2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textview2">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="1"
                android:textColor="#000" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="2"
                android:textColor="#000" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="3"
                android:textColor="#000" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="4"
                android:textColor="#000" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="5"
                android:textColor="#000" />
        </RadioGroup>

        <TextView
            android:id="@+id/textview3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/Music_3"
            android:textColor="#000"
            app:layout_constraintTop_toTopOf="@+id/guideline19"
            android:layout_marginLeft="8dp"/>

        <RadioGroup
            android:id="@+id/Music3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textview3">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="1"
                android:textColor="#000" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="2"
                android:textColor="#000" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="3"
                android:textColor="#000" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="4"
                android:textColor="#000" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="5"
                android:textColor="#000" />
        </RadioGroup>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="100dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="219dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="338dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>